# mangos-boost

./: .gitignore  CMakeLists.txt  README.md  config.h.cmake
cmake/: options.cmake  show_options.cmake
cmake/modules/: FindTBB.cmake
dep/: CMakeLists.txt  Packages.md
dep/ace-6.2.6/: CMakeLists.txt
dep/ace-6.2.6/ace/: CMakeLists.txt  SOCK_Dgram_Mcast.cpp  config-macros.h
dep/ace-6.2.6/ace/Compression/: Compression_vc10.sln  Compression_vc11.sln
dep/ace-6.2.6/ace/Compression/rle/: rle_vc10.sln  rle_vc11.sln
dep/ace-6.2.6/ace/ETCL/: ETCL_vc10.sln  ETCL_vc11.sln
dep/ace-6.2.6/ace/Monitor_Control/: Monitor_Control_vc10.sln  Monitor_Control_vc11.sln
dep/ace-6.2.6/ace/QoS/: QoS_vc10.sln  QoS_vc11.sln
dep/backtrace/: CMakeLists.txt
dep/backtrace/boost/: backtrace.cpp  backtrace.hpp
dep/backtrace/win/: Backtrace_VC100.sln  Backtrace_VC110.sln  Backtrace_VC120.sln  Backtrace_VC90.sln
dep/backtrace/win/VC100/: Backtrace.vcxproj
dep/backtrace/win/VC110/: Backtrace.vcxproj  Backtrace.vcxproj.filters
dep/backtrace/win/VC120/: Backtrace.vcxproj  Backtrace.vcxproj.filters
dep/backtrace/win/VC90/: Backtrace.vcproj
dep/g3dlite/: CMakeLists.txt
dep/gsoap/: CMakeLists.txt
dep/include/boost-extension/: Jamfile.v2  README.rtf  boost-build.jam  ~$README.rtf
dep/include/boost-extension/boost/extension/: convenience.hpp  counted_factory.hpp  counted_factory_map.hpp  counted_factorymap.hpp  extension.hpp  factory.hpp  factory_map.hpp  factorymap.hpp  filesystem.hpp  functor.hpp  registry.hpp  shared_library.hpp  zone.hpp
dep/include/boost-extension/boost/extension/impl/: library_impl.hpp  linked_library.hpp  typeinfo.hpp
dep/include/boost-extension/libs/extension/: fake.cpp
dep/include/boost-extension/libs/extension/doc/: Jamfile.v2  appendices.qbk  appendix_a.qbk  extension.qbk  factories.qbk  faq.qbk  introduction.qbk  performance_analysis.qbk  quick_start.qbk  shared_libraries.qbk  tutorial1.qbk  tutorial2.qbk  tutorial3.qbk  tutorial4.qbk  tutorial5.qbk  tutorial6.qbk  tutorials.qbk
dep/include/boost-extension/libs/extension/examples/: Jamfile.v2  hello_world.cpp  main.cpp  word.hpp
dep/include/boost-extension/libs/extension/scripts/: GenerateHeaders.py
dep/lib/win32_release/: .gitignore
dep/recastnavigation/: CMakeLists.txt
dep/recastnavigation/Detour/win/: Detour_VC120.sln
dep/recastnavigation/Recast/win/: Recast_VC120.sln
dep/recastnavigation/detour/: CMakeLists.txt
dep/src/: CMakeLists.txt
dep/tbb-4.2u5/lib/ia32/vc10/: tbb.def
dep/tbb-4.2u5/lib/ia32/vc11/: tbb.def
dep/tbb-4.2u5/lib/ia32/vc11_ui/: tbb.def
dep/tbb-4.2u5/lib/ia32/vc12/: tbb.def
dep/tbb-4.2u5/lib/ia32/vc9/: tbb.def
dep/tbb-4.2u5/lib/intel64/vc10/: tbb.def
dep/tbb-4.2u5/lib/intel64/vc11/: tbb.def
dep/tbb-4.2u5/lib/intel64/vc11_ui/: tbb.def
dep/tbb-4.2u5/lib/intel64/vc12/: tbb.def
dep/tbb-4.2u5/lib/intel64/vc9/: tbb.def
dep/zlib-1.2.8/: CMakeLists.txt
doc/: AUTHORS.md  NEWS.md
src/: CMakeLists.txt
src/bindings/universal/: CMakeLists.txt  ScriptMgr.cpp  ScriptMgr.h
src/bindings/universal/Scripts/: sc_defines.cpp  sc_defines.h
src/framework/: CMakeLists.txt  Common.h
src/framework/Platform/: Define.h
src/framework/Policies/: ThreadingModel.h
src/framework/Utilities/: Util.cpp
src/framework/cryptography/: BigNumber.cpp  HMACSHA1.cpp  SARC4.cpp  Sha1.cpp
src/framework/database/: Database.cpp  DatabaseMysql.cpp  DatabaseMysql.h  SqlDelayThread.h  SqlPreparedStatement.h
src/framework/game_system/: NGrid.h  TypeContainer.h
src/framework/helper/: ConsoleArguments.h  Hints.h  ProcessPriority.h
src/framework/log/: Log.cpp  Log.h
src/framework/network/: NetworkBuffer.cpp  NetworkBuffer.h  NetworkManager.cpp  ProtocolDefinitions.h  Socket.cpp  Socket.h
src/framework/platform_temp/: Define.h
src/framework/policies/: MemoryManagement.cpp
src/framework/system/: ServiceWin32.cpp
src/framework/threading/: LockedQueue.h  Threading.cpp
src/framework/utilities/: Timer.cpp  Timer.h  Util.cpp
src/framework/utilities_temp/: ByteConverter.h
src/game/: AccountMgr.cpp  CMakeLists.txt  Cell.h  CharacterHandler.cpp  GridDefines.h  GridMap.cpp  GridMap.h  GridStates.cpp  Level3.cpp  Map.h  MapManager.cpp  MapManager.h  MapPersistentStateMgr.h  MiscHandler.cpp  MoveMap.h  MoveMapSharedDefines.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectGridLoader.h  PathFinder.cpp  PathFinder.h  ScriptMgr.h  UpdateData.cpp  World.cpp  World.h  WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h  pchdef.h
src/game/AuctionHouseBot/: AuctionHouseBot.cpp  AuctionHouseBot.h
src/game/BattleGround/: BattleGroundMgr.cpp  BattleGroundMgr.h
src/mangosd/: CMakeLists.txt  CliRunnable.cpp  MaNGOSsoap.cpp  MaNGOSsoap.h  Main.cpp  Master.cpp  RemoteAdministration.cpp  RemoteAdministration.h  mangosd.conf.dist.in
src/realmd/: AuthSocket.cpp  AuthSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  SessionManager.cpp  SessionManager.h  realmd.conf.dist.in
src/shared/: ByteBuffer.cpp  CMakeLists.txt  Common.h  Errors.h  Log.cpp  SystemConfig.h.in  Threading.cpp  Threading.h  Util.cpp  WorldPacket.h
src/shared/Config/: Config.cpp  Config.h
src/shared/Database/: Database.cpp  Database.h  SqlDelayThread.h  SqlOperations.h
src/shared/Network/: NetworkManager.cpp  NetworkManager.h  NetworkThread.cpp  NetworkThread.h  ProtocolDefinitions.h  Socket.cpp  Socket.h
win/: mangosdVC100.sln  mangosdVC110.sln  mangosdVC120.sln  mangosdVC90.sln
win/VC100/: framework.vcxproj  game.vcxproj  mangosd.vcxproj  realmd.vcxproj  script.vcxproj  shared.vcxproj  shared.vcxproj.filters
win/VC110/: framework.vcxproj  game.vcxproj  mangosd.vcxproj  mangosd.vcxproj.filters  realmd.vcxproj  shared.vcxproj
win/VC120/: bzip2.vcxproj  framework.vcxproj  game.vcxproj  mangosd.vcxproj  mangosd.vcxproj.filters  realmd.vcxproj  script.vcxproj  shared.vcxproj  shared.vcxproj.filters
win/VC90/: framework.vcproj  game.vcproj  mangosd.vcproj  realmd.vcproj  script.vcproj  shared.vcproj
(+46 files in other folders)
